--- a/project5_webtoon/client/mainwindow.ui
+++ b/project5_webtoon/client/mainwindow.ui
@@ -21,7 +21,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="main_page">
        <layout class="QGridLayout" name="gridLayout_3">
@@ -422,13 +422,6 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
         </item>
         <item>
          <layout class="QGridLayout" name="gridLayout_17">
-          <item row="1" column="1">
-           <widget class="QPushButton" name="like_btn">
-            <property name="text">
-             <string>좋아요</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0">
            <widget class="QPushButton" name="beforeEpi_btn">
             <property name="text">
@@ -454,6 +447,20 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
            <widget class="QPushButton" name="bookmark_add_btn">
             <property name="text">
              <string>즐겨찾기 추가</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QPushButton" name="like_btn">
+            <property name="text">
+             <string>좋아요</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLabel" name="like_cnt_label">
+            <property name="text">
+             <string> </string>
             </property>
            </widget>
           </item>
