--- a/project6_delivery/delivery_client/mainwindow.ui
+++ b/project6_delivery/delivery_client/mainwindow.ui
@@ -81,7 +81,7 @@
     <item row="1" column="0">
      <widget class="QStackedWidget" name="mainStackedWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="user_main_page">
        <layout class="QGridLayout" name="gridLayout_3">
@@ -460,7 +460,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
             <widget class="QLabel" name="menu_shopTitle">
              <property name="font">
               <font>
-               <pointsize>15</pointsize>
+               <pointsize>16</pointsize>
                <bold>true</bold>
               </font>
              </property>
@@ -584,7 +584,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
             </spacer>
            </item>
            <item row="0" column="2">
-            <widget class="QPushButton" name="oder_btn">
+            <widget class="QPushButton" name="to_order_btn">
              <property name="minimumSize">
               <size>
                <width>120</width>
@@ -606,7 +606,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="page">
+      <widget class="QWidget" name="pay_page">
        <layout class="QGridLayout" name="gridLayout_17">
         <item row="0" column="0">
          <widget class="QFrame" name="frame_14">
@@ -621,7 +621,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
             <widget class="QLabel" name="menu_shopTitle2">
              <property name="font">
               <font>
-               <pointsize>15</pointsize>
+               <pointsize>16</pointsize>
                <bold>true</bold>
               </font>
              </property>
@@ -634,19 +634,19 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
             </widget>
            </item>
            <item>
-            <widget class="QTableView" name="tableView_2"/>
+            <widget class="QTableView" name="pay_tableView"/>
            </item>
            <item>
-            <widget class="QFrame" name="frame_15">
+            <widget class="QFrame" name="frame_17">
              <property name="frameShape">
               <enum>QFrame::Shape::StyledPanel</enum>
              </property>
              <property name="frameShadow">
               <enum>QFrame::Shadow::Raised</enum>
              </property>
-             <layout class="QGridLayout" name="gridLayout_18">
-              <item row="0" column="0">
-               <spacer name="horizontalSpacer_9">
+             <layout class="QHBoxLayout" name="horizontalLayout_6">
+              <item>
+               <spacer name="horizontalSpacer_11">
                 <property name="orientation">
                  <enum>Qt::Orientation::Horizontal</enum>
                 </property>
@@ -658,8 +658,58 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                 </property>
                </spacer>
               </item>
+              <item>
+               <widget class="QLabel" name="label_8">
+                <property name="minimumSize">
+                 <size>
+                  <width>70</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="font">
+                 <font>
+                  <pointsize>13</pointsize>
+                  <bold>true</bold>
+                 </font>
+                </property>
+                <property name="text">
+                 <string>총 가격 :</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="menu_price_label">
+                <property name="minimumSize">
+                 <size>
+                  <width>110</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="font">
+                 <font>
+                  <pointsize>13</pointsize>
+                  <bold>false</bold>
+                 </font>
+                </property>
+                <property name="text">
+                 <string>TextLabel</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item>
+            <widget class="QFrame" name="frame_15">
+             <property name="frameShape">
+              <enum>QFrame::Shape::StyledPanel</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Shadow::Raised</enum>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_18">
               <item row="0" column="2">
-               <widget class="QLineEdit" name="lineEdit">
+               <widget class="QLineEdit" name="del_address_text">
                 <property name="minimumSize">
                  <size>
                   <width>600</width>
@@ -669,7 +719,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </widget>
               </item>
               <item row="1" column="2">
-               <widget class="QLineEdit" name="lineEdit_2">
+               <widget class="QLineEdit" name="del_request_text">
                 <property name="minimumSize">
                  <size>
                   <width>600</width>
@@ -689,6 +739,19 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                  <string>요청사항</string>
                 </property>
                </widget>
+              </item>
+              <item row="0" column="0">
+               <spacer name="horizontalSpacer_9">
+                <property name="orientation">
+                 <enum>Qt::Orientation::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
               </item>
               <item row="0" column="1">
                <widget class="QLabel" name="label_5">
@@ -741,7 +804,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </spacer>
               </item>
               <item>
-               <widget class="QPushButton" name="pushButton_2">
+               <widget class="QPushButton" name="to_menu_back_btn">
                 <property name="minimumSize">
                  <size>
                   <width>120</width>
@@ -759,7 +822,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </widget>
               </item>
               <item>
-               <widget class="QPushButton" name="pushButton_3">
+               <widget class="QPushButton" name="pay_btn">
                 <property name="minimumSize">
                  <size>
                   <width>120</width>
@@ -833,7 +896,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
 }</string>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="shop_orderWait_tab">
            <attribute name="title">
@@ -841,7 +904,20 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
            </attribute>
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
-             <widget class="QTableView" name="orderWait_tableView"/>
+             <widget class="QTableView" name="orderWait_tableView">
+              <property name="editTriggers">
+               <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
+              </property>
+              <property name="textElideMode">
+               <enum>Qt::TextElideMode::ElideRight</enum>
+              </property>
+              <property name="verticalScrollMode">
+               <enum>QAbstractItemView::ScrollMode::ScrollPerItem</enum>
+              </property>
+              <property name="horizontalScrollMode">
+               <enum>QAbstractItemView::ScrollMode::ScrollPerItem</enum>
+              </property>
+             </widget>
             </item>
             <item row="1" column="0">
              <widget class="QFrame" name="frame_4">
@@ -966,7 +1042,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
      <x>0</x>
      <y>0</y>
      <width>931</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
